# diffurcheck-telegram-bot

./: Cargo.toml  LICENCE.txt  README.md
assignments/first_order_equations_2025/: Cargo.toml
assignments/first_order_equations_2025/src/: main.rs  problem.typ  solution.typ
assignments/linear_systems_2025/: Cargo.toml  plan.typ
assignments/linear_systems_2025/src/: .format.rs  .linear_equation_old.rs  linear_equation.rs  linear_system.rs  main.rs  problem.typ  solution.typ
assignments/test_assignment/: Cargo.toml  output.json  output.txt
assignments/test_assignment/src/: main.rs  problem.typ  solution.typ
migrations/: 0001_setup.sql  0002_admin.sql  0002_group.sql  0003_group.sql  0003_student.sql  0004_assignment.sql  0004_student.sql  0005_assignment.sql  0005_group_assignment.sql  0006_group_assignment.sql  0006_variant.sql  0007_submission.sql  0009_insert_groups_2025_autumn.sql  0009_linear_systems_assignment_2025_autumn.sql  0009_test_assignment.sql  0010_linear_systems_assignment_2025_autumn.sql  0011_linear_systems_assignment_2025_autumn.sql
misc/pretty_matrix_inverse/: Cargo.toml
src/: ._model.rs  main.rs
src/assignments/: generation.rs  mod.rs  model.rs
src/bot/: admin.rs  assignment.rs  idle.rs  mod.rs  registration.rs  start.rs
src/bot/long_messages/: start_greeting.txt  submission_rules.txt
src/db/: _model.rs  helpers.rs  model.rs
src/submissions/: compile.rs  group_assignment_template.typ  mod.rs  storage.rs
src/util/: mod.rs
variant_generation/: Cargo.toml
variant_generation/src/: lib.rs
