[package]
name = "diffurcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenvy = "0.15.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
teloxide = { version = "0.17.0", features = ["macros"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.19.0"
