[package]
name = "diffurcheck"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "assignments/test_assignment", 
    "assignments/linear_systems_2025", 
    "assignments/first_order_equations_2025", 
    "misc/pretty_matrix_inverse",
]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
derive_typst_intoval = "0.6.0"
dotenvy = "0.15.7"
log = "0.4.29"
lopdf = "0.38.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
teloxide = { version = "0.17.0", features = ["macros"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
typst = "0.14.2"
typst-as-lib = { version = "0.15.0", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14.2"
typst-render = "0.14.2"
uuid = "1.19.0"
variant_generation = {path = "variant_generation"}
