[package]
name = "first_order_equations"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
derive_typst_intoval = "0.6.0"
image = "0.25.9"
indoc = "2.0.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
typst = "0.14.2"
typst-as-lib = { version = "0.15.0", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14.2"
typst-render = "0.14.2"
variant_generation = { path = "../../variant_generation" }
